--- a/InventoryService/src/main/resources/application.yml
+++ b/InventoryService/src/main/resources/application.yml
@@ -4,10 +4,10 @@ spring:
   application:
     name: InventoryService
   datasource:
-    url: jdbc:mysql://localhost:3306/inventory_db?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/inventory_db
     driverClassName: com.mysql.cj.jdbc.Driver
-    username: root
-    password: password
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
@@ -16,4 +16,4 @@ spring:
 axon:
   axonserver:
     client-id: InventoryService
-    servers: localhost:8124
+    servers: ${AXON_HOST}
