--- a/order-service/kustomization.yaml
+++ b/order-service/kustomization.yaml
@@ -3,3 +3,9 @@ kind: Kustomization
 
 resources:
 - gcp-deploy-services.yaml
+
+
+
+  # need to change acc to gcp and azure deployment
+- azure-manifest/deployment.yaml
+- azure-manifest/service.yaml
