--- a/payment-service/kustomization.yaml
+++ b/payment-service/kustomization.yaml
@@ -4,3 +4,8 @@ kind: Kustomization
 resources:
 - gcp-deploy-service.yaml
 
+
+
+  # need to change acc to gcp and azure deployment
+- azure-manifest/deployment.yaml
+- azure-manifest/service.yaml
