--- a/shipment-service/kustomization.yaml
+++ b/shipment-service/kustomization.yaml
@@ -5,3 +5,7 @@ resources:
 - gcp-deploy-service.yaml
 
 
+
+  # need to change acc to gcp and azure deployment
+- azure-manifest/deployment.yaml
+- azure-manifest/service.yaml
