--- a/admin-service/azure-manifest/azure-deploy-service.yaml
+++ b/admin-service/azure-manifest/azure-deploy-service.yaml
@@ -17,5 +17,18 @@ spec:
           image: your-acr-name.azurecr.io/your-image-name
 
           ports:
-            - containerPort: 9091
+            - containerPort: 8080
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: adminservice
+spec:
+  type: LoadBalancer
+  selector:
+    app: adminservice
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
