--- a/cart-service/azure-manifest/azure-deploy-service.yaml
+++ b/cart-service/azure-manifest/azure-deploy-service.yaml
@@ -17,5 +17,19 @@ spec:
           image: your-acr-name.azurecr.io/your-image-name
 
           ports:
-            - containerPort: 9091
+            - containerPort: 9096
 
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cartservice
+spec:
+  type: LoadBalancer
+  selector:
+    app: cartservice
+  ports:
+    - protocol: TCP
+      port: 9096
+      targetPort: 9096
