--- a/inventory-service/azure-manifest/azure-deploy-service.yaml
+++ b/inventory-service/azure-manifest/azure-deploy-service.yaml
@@ -19,3 +19,17 @@ spec:
           ports:
             - containerPort: 9091
 
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: inventoryservice
+spec:
+  type: LoadBalancer
+  selector:
+    app: inventoryservice
+  ports:
+    - protocol: TCP
+      port: 9091
+      targetPort: 9091
