--- a/payment-service/azure-manifest/azure-deploy-service.yaml
+++ b/payment-service/azure-manifest/azure-deploy-service.yaml
@@ -18,3 +18,18 @@ spec:
 
           ports:
             - containerPort: 9092
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: paymentservice
+spec:
+  type: LoadBalancer
+  selector:
+    app: paymentservice
+  ports:
+    - protocol: TCP
+      port: 9092
+      targetPort: 9092
