--- a/shipment-service/azure-manifest/azure-deploy-service.yaml
+++ b/shipment-service/azure-manifest/azure-deploy-service.yaml
@@ -19,3 +19,16 @@ spec:
           ports:
             - containerPort: 9093
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: shipmentservice
+spec:
+  type: LoadBalancer
+  selector:
+    app: shipmentservice
+  ports:
+    - protocol: TCP
+      port: 9093
+      targetPort: 9093
