--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -49,7 +49,8 @@ jobs:
           
       - name: Build, Publish, and Deploy
         run: |
-          . apps-deployment-script.sh "us-east1" 
+          #. apps-deployment-script.sh "us-east1" 
+          mvn clean install
         env:
          #CUSTOM_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN_PAT }}
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
