--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -48,9 +48,8 @@ jobs:
           echo "GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}"
           
       - name: Build, Publish, and Deploy
-        run: mvn clean install
-          #. apps-deployment-script.sh "us-east1" 
-          #mvn clean install
+        run: |
+          . apps-deployment-script.sh "us-east1" 
         env:
          #CUSTOM_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN_PAT }}
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
