--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -34,8 +34,14 @@ jobs:
       - name: configure docker
         run: |-
           gcloud --quiet auth configure-docker
+      
+      - name: Configure Maven settings
+        run: |
+          mkdir -p $HOME/.m2
+          echo "${{ secrets.MAVEN_SETTINGS_XML }}" > $HOME/.m2/settings.xml  
+          
       - name: Build, Publish, and Deploy
         run: |
           . apps-deployment-script.sh "us-east1" 
         env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
