--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -46,3 +46,4 @@ jobs:
         env:
           GITHUB_USERNAME: ${{ secrets.CUSTOM_GITHUB_USERNAME }}
           GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
+        shell: bash -l
