--- a/shipment-service/pom.xml
+++ b/shipment-service/pom.xml
@@ -195,7 +195,7 @@
 			</activation>
 			<properties>
 				<!--	Sonar Config		-->
-				<sonar.projectKey>shipment-service</sonar.projectKey>
+				<sonar.projectKey>NashTech-Labs:car-demo:shipment-service</sonar.projectKey>
 				<sonar.organization>nashtech</sonar.organization>
 				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 				<sonarConfig>b47aeba29df2889126c736ee7012a5a490edc34a</sonarConfig> <!-- NOSONAR -->
