--- a/shipment-service/pom.xml
+++ b/shipment-service/pom.xml
@@ -196,6 +196,7 @@
 			<properties>
 				<!--	Sonar Config		-->
 				<sonar.projectKey>NashTech-Labs:car-demo:shipment-service</sonar.projectKey>
+				<sonar.branch.name>main</sonar.branch.name>
 				<sonar.organization>nashtech</sonar.organization>
 				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 				<sonarConfig>b47aeba29df2889126c736ee7012a5a490edc34a</sonarConfig> <!-- NOSONAR -->
