--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: SonarCloud Scan
-        working-directory: ./shipment-service
+        #working-directory: ./shipment-service
         run: mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nashtech -Dsonar.projectKey=shipment-service
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
