--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -21,7 +21,10 @@ jobs:
       - name: SonarCloud Scan
         #working-directory: ./shipment-service
         #run: mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nashtech
-        run: mvn clean verify sonar:sonar -X
+        #run: mvn clean verify sonar:sonar -X
+        run: |
+          cd car-demo/shipment-service  # Adjust the path accordingly
+          mvn clean install sonar:sonar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
