--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -8,26 +8,55 @@ env:
 
 jobs:
   sonarcloud:
-    name: SonarCloud
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 19
-        uses: actions/setup-java@v3
-        with:
-          java-version: '19'
-          distribution: 'temurin'
-          cache: maven
-      - name: SonarCloud Scan
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '19'
+
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.sonar/cache
+          ~/.sonar/cache-*
+        key: ${{ runner.os }}-sonar
+        restore-keys: |
+          ${{ runner.os }}-sonar
+
+    - name: Build and Analyze with SonarCloud
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: |
+        cd car-demo/shipment-service  # Adjust the path accordingly
+        mvn clean install sonar:sonar
+  #sonarcloud:
+   # name: SonarCloud
+   # runs-on: ubuntu-latest
+   # steps:
+    #  - uses: actions/checkout@v3
+     # - name: Set up JDK 19
+     #   uses: actions/setup-java@v3
+      #  with:
+      #    java-version: '19'
+      #    distribution: 'temurin'
+       #   cache: maven
+     # - name: SonarCloud Scan
         #working-directory: ./shipment-service
         #run: mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nashtech
         #run: mvn clean verify sonar:sonar -X
-        run: |
-          cd car-demo/shipment-service  # Adjust the path accordingly
-          mvn clean install sonar:sonar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #  run: |
+       #   cd car-demo/shipment-service  # Adjust the path accordingly
+       #   mvn clean install sonar:sonar
+       # env:
+       #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   setup-build-publish-deploy:
     runs-on: ubuntu-latest
     permissions:
