--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -200,6 +200,9 @@
                     **/*common*/**,
                     **/*constant*/**,
                     **/*model*/**,
+                    **/*exception*/**,
+                    **/*request*/**,
+                    **/*response*/**,
                     **/*Application.*
                 </sonar.coverage.exclusions>
             </properties>
