--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -13,6 +13,37 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
+
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '11'
+
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.sonar/cache
+          ~/.sonar/cache-*
+        key: ${{ runner.os }}-sonar
+        restore-keys: |
+          ${{ runner.os }}-sonar
+
+    - name: Run SonarCloud for Each Repository
+      run: |
+        cat projects-changes-deploy.txt | while read repo; do
+          echo "Processing repository: $repo"
+          cd $repo
+          mvn clean install sonar:sonar
+          cd ..
+        done
+  sonarcloud1:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
     - name: List Directory Contents
       run: ls -R
     - name: Set up JDK
@@ -35,7 +66,7 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
-        #cd car-demo/shipment-service  # Adjust the path accordingly
+        cd car-demo/shipment-service  # Adjust the path accordingly
         mvn -X clean install sonar:sonar
   #sonarcloud:
    # name: SonarCloud
