--- a/.github/workflows/car-demo-pipeline.yml
+++ b/.github/workflows/car-demo-pipeline.yml
@@ -20,47 +20,47 @@ jobs:
         distribution: 'adopt'
         java-version: '19'
 
-    - name: Cache SonarCloud packages
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.sonar/cache
-          ~/.sonar/cache-*
-        key: ${{ runner.os }}-sonar
-        restore-keys: |
-          ${{ runner.os }}-sonar
+  #   - name: Cache SonarCloud packages
+  #     uses: actions/cache@v2
+  #     with:
+  #       path: |
+  #         ~/.sonar/cache
+  #         ~/.sonar/cache-*
+  #       key: ${{ runner.os }}-sonar
+  #       restore-keys: |
+  #         ${{ runner.os }}-sonar
 
-    - name: Run SonarCloud for Each Repository
-      run: |
-        cat projects-changes-deploy.txt | while read repo; do
-          echo "Processing repository: $repo"
-          cd $repo
-          mvn clean install sonar:sonar
-          cd ..
-        done
-  sonarcloud1:
-    runs-on: ubuntu-latest
+  # #   - name: Run SonarCloud for Each Repository
+  # #     run: |
+  # #       cat projects-changes-deploy.txt | while read repo; do
+  # #         echo "Processing repository: $repo"
+  # #         cd $repo
+  # #         mvn clean install sonar:sonar
+  # #         cd ..
+  # #       done
+  # # sonarcloud1:
+  # #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-    - name: List Directory Contents
-      run: ls -R
-    - name: Set up JDK
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt'
-        java-version: '19'
+  # #   steps:
+  # #   - name: Checkout Repository
+  # #     uses: actions/checkout@v2
+  # #   - name: List Directory Contents
+  # #     run: ls -R
+  # #   - name: Set up JDK
+  # #     uses: actions/setup-java@v2
+  # #     with:
+  # #       distribution: 'adopt'
+  # #       java-version: '19'
 
-    - name: Cache SonarCloud packages
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.sonar/cache
-          ~/.sonar/cache-*
-        key: ${{ runner.os }}-sonar
-        restore-keys: |
-          ${{ runner.os }}-sonar
+  # #   - name: Cache SonarCloud packages
+  # #     uses: actions/cache@v2
+  # #     with:
+  # #       path: |
+  # #         ~/.sonar/cache
+  # #         ~/.sonar/cache-*
+  # #       key: ${{ runner.os }}-sonar
+  # #       restore-keys: |
+  # #         ${{ runner.os }}-sonar
 
     # - name: Build and Analyze with SonarCloud
     #   env:
