--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -133,7 +133,7 @@ jobs:
            echo "-----------printing ---------------"
            #echo "Token:" ${{ secrets.GITHUB_TOKEN }} | base64
            #echo "Token:" ${{ env.GITHUB_TOKEN }} | base64
-           echo "Token:" $GITHUB_TOKEN | base64
+           echo $GITHUB_TOKEN | base64
         env:
            #GITHUB_USERNAME: ${{ secrets.CUSTOM_GITHUB_USERNAME }}
            GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
