--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -131,9 +131,9 @@ jobs:
         run: |
            . apps-deployment-script.sh "us-east1" 
            echo "-----------printing ---------------"
-           #echo "Token:" ${{ secrets.GITHUB_TOKEN }} | base64
-           #echo "Token:" ${{ env.GITHUB_TOKEN }} | base64
-           echo $GITHUB_TOKEN | base64
+           #echo "${{ secrets.GITHUB_TOKEN }}" | base64
+           #echo "${{ env.GITHUB_TOKEN }}" | base64
+           echo "$GITHUB_TOKEN" | base64
         env:
            #GITHUB_USERNAME: ${{ secrets.CUSTOM_GITHUB_USERNAME }}
            GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
