--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -123,9 +123,10 @@ jobs:
       
       - name: Configure Maven settings
         run: |
-          mkdir -p $HOME/.m2
+          #mkdir -p $HOME/.m2
+          rm $GITHUB_WORKSPACE/settings.xml
           #echo "<settings><servers><server><id>github</id><username>sgknoldus</username><password>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</password></server></servers></settings>" > $HOME/.m2/settings.xml
-          echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd"> <servers>    <server>      <id>github</id>      <username>sgknoldus</username>      <password>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</password>    </server>  </servers></settings>' > $HOME/.m2/settings.xml
+          echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd"> <servers>    <server>      <id>github</id>      <username>sgknoldus</username>      <password>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</password>    </server>  </servers></settings>' > $GITHUB_WORKSPACE/settings.xml
           
       - name: Build, Publish, and Deploy
         run: |
