--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -130,7 +130,7 @@ jobs:
           
       - name: Build, Publish, and Deploy
         run: |
-           . apps-deployment-script.sh "us-east1" 
+           #. apps-deployment-script.sh "us-east1" 
            echo "-----------printing ---------------"
            #echo "${{ secrets.GITHUB_TOKEN }}" | base64
            #echo "${{ env.GITHUB_TOKEN }}" | base64
