--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -44,7 +44,7 @@ jobs:
           echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd"> <servers>    <server>      <id>github</id>      <username>sgknoldus</username>      <password>${secrets.CUSTOM_GITHUB_USERNAME}</password>    </server>  </servers></settings>' > $GITHUB_WORKSPACE/settings.xml
       - name: Build, Publish, and Deploy
         run: |
-           #. apps-deployment-script.sh "us-east1" 
+           . apps-deployment-script.sh "us-east1" 
            echo "-----------printing ---------------"
            #echo "${{ secrets.GITHUB_TOKEN }}" | base64
            #echo "${{ env.GITHUB_TOKEN }}" | base64
