--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -1,4 +1,4 @@
-name: GCP Pipeline Updated
+name: GCP Pipeline
 
 on:
   push:
@@ -34,24 +34,8 @@ jobs:
       - name: configure docker
         run: |-
           gcloud --quiet auth configure-docker
-      
-      - name: Configure Maven settings
-        run: |
-          mkdir -p $HOME/.m2
-          rm $GITHUB_WORKSPACE/settings.xml
-          #echo "<settings><servers><server><id>github</id><username>sgknoldus</username><password>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</password></server></servers></settings>" > $HOME/.m2/settings.xml
-          #echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd"> <servers>    <server>      <id>github</id>      <username>sgknoldus</username>      <password>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</password>    </server>  </servers></settings>' > $GITHUB_WORKSPACE/settings.xml
-          #echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd"> <servers>    <server>      <id>github</id>      <username>sgknoldus</username>      <password>${secrets.CUSTOM_GITHUB_TOKEN_PAT}</password>    </server>  </servers></settings>' > $GITHUB_WORKSPACE/settings.xml
-          echo '<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd"> <servers>    <server>      <id>github</id>      <username>sgknoldus</username>      <password>${secrets.CUSTOM_GITHUB_TOKEN_PAT}</password>    </server>  </servers></settings>' > $HOME/.m2/settings.xml
-          
       - name: Build, Publish, and Deploy
         run: |
-           . apps-deployment-script.sh "us-east1" 
-           echo "-----------printing ---------------"
-           #echo "${{ secrets.GITHUB_TOKEN }}" | base64
-           #echo "${{ env.GITHUB_TOKEN }}" | base64
-           #echo "$GITHUB_TOKEN" | base64
+         . apps-deployment-script.sh "us-east1" 
         env:
-           #GITHUB_USERNAME: ${{ secrets.CUSTOM_GITHUB_USERNAME }}
-           #GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
-           GITHUB_TOKEN: ${{secrets.CUSTOM_GITHUB_TOKEN_PAT}}
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
