--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,8 +10,8 @@
     </parent>
 
     <groupId>com.nashtech.common</groupId>
-    <artifactId>common-lib</artifactId>
-    <version>2.5</version>
+    <artifactId>common</artifactId>
+    <version>2.3</version>
     <name>common</name>
 
     <repositories>
