--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -12,27 +12,31 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
           distribution: adopt
-          java-version: '19'
+          java-version: "19"
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v2
         with:
           path: |
             ~/.sonar/cache
             ~/.sonar/cache-*
+            ~/.m2/repository
           key: ${{ runner.os }}-sonar
           restore-keys: |
+
       - name: Run SonarCloud for Each Repository
         run: |
           cat projects-changes-deploy.txt | while read repo; do
             echo "Processing repository: $repo"
             cd $repo
             mvn clean install sonar:sonar
-           cd ..
-           done
+            cd ..
+          done
         env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
