--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -33,7 +33,8 @@ jobs:
         run: |
           cat projects-changes-deploy.txt | while read repo; do
             echo "Processing repository: $repo"
-            cd car-demo/$repo
+            #cd $repo
+            car-demo/$repo
             #mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nashtech -Dsonar.projectKey=$repo -Dsonar.branch.name=main -Dsonar.login=${{ secrets.SONAR_TOKEN }} -X
             mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nashtech
             cd ..
