--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -33,8 +33,7 @@ jobs:
         run: |
           cat projects-changes-deploy.txt | while read repo; do
             echo "Processing repository: $repo"
-            #cd $repo
-            car-demo/$repo
+            cd $repo
             echo "Current path================" $GITHUB_WORKSPACE
             mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nashtech
           done
