--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -8,36 +8,18 @@ env:
 
 jobs:
   sonarcloud:
+    name: SonarCloud
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - name: Set up JDK 19
+        uses: actions/setup-java@v3
         with:
-          distribution: adopt
-          java-version: "19"
-
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.sonar/cache
-            ~/.sonar/cache-*
-            ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Run SonarCloud for Each Repository
-        run: |
-          cat projects-changes-deploy.txt | while read repo; do
-            echo "Processing repository: $repo"
-            cd $repo
-            #mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io  -Dsonar.organization=nashtech
-            mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io  -Dsonar.organization=nashtech -Dsonar.branch.name=main
-            cd ..
-          done
+          java-version: '19'
+          distribution: 'temurin'
+          cache: maven
+      - name: SonarCloud Scan
+        run: mvn verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nashtech
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
