--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -19,7 +19,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: SonarCloud Scan
-        run: mvn verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nashtech
+        run: |
+          cat projects-changes-deploy.txt | while read repo; do
+            echo "Processing repository: $repo"
+            cd $repo
+            mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io  -Dsonar.organization=nashtech
+            cd ..
+          done        
         env:
          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
